<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#F5F5F5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/cafe_title1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/kitchen_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/kitchen_text_view"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/type_kitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5sp"
            android:text="@string/type_cafe1"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="#F5F5F5">

            <ImageView
                android:id="@+id/price_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/money" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@+id/price_image_view"
                android:text="@string/price_cafe1"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/work_time_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@+id/price_image_view"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/stopwatch" />

            <TextView
                android:id="@+id/work_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_text_view"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@+id/price_image_view"
                android:text="@string/time_cafe1"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/phone_number_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@+id/work_time_image_view"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/phone_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/work_time_text_view"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@+id/price_image_view"
                android:autoLink="phone"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/phone_cafe1"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/website_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@+id/phone_number_image_view"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/global" />

            <TextView
                android:id="@+id/website_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number_text_view"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@+id/price_image_view"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/web_cafe1"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>